samples/_failures_safe/1761313754_a0b8fa_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0a279595.c: In function ‘main’:
./samples/SAFE/__tmp_0a279595.c:151:17: error: expected declaration or statement at end of input
  151 |                 }
      |                 ^
./samples/SAFE/__tmp_0a279595.c:151:17: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_0a279595.c:151:17: error: expected declaration or statement at end of input
